# qec-decoder

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/: biased_noise_benchmark.py  decoder_benchmark.py  qldpc_comparison.py  repetition_threshold.py  surface_threshold.py
qec/: __init__.py
qec/codes/: __init__.py  bivariate_bicycle.py  css_capacity.py  repetition.py  surface.py  surface_css.py
qec/decoders/: __init__.py  wrappers.py
qec/harness/: __init__.py  latency.py  threshold.py
qec/noise/: __init__.py  biased.py
tests/: test_bivariate_bicycle.py  test_decoders.py  test_noise.py  test_smoke.py  test_surface.py
