[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qec-decoder-study"
version = "0.1.0"
description = "A surface-code decoder study under realistic circuit-level noise, with a qLDPC stretch goal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "stim==1.16.0",
    "sinter==1.16.0",
    "pymatching==2.4.0",
    "ldpc==2.4.1",
    "numpy==2.5.0",
    "scipy==1.18.0",
    "matplotlib==3.11.0",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1"]

[tool.setuptools.packages.find]
include = ["qec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
